; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_wholenumber.c_wholenumberConnect.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_wholenumber.c_wholenumberConnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_NOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"CREATE TABLE x(value)\00", align 1
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8**, i32**, i8**)* @wholenumberConnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wholenumberConnect(i32* %0, i8* %1, i32 %2, i8** %3, i32** %4, i8** %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8**, align 8
  %12 = alloca i32**, align 8
  %13 = alloca i8**, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8** %3, i8*** %11, align 8
  store i32** %4, i32*** %12, align 8
  store i8** %5, i8*** %13, align 8
  %15 = call i32* @sqlite3_malloc(i32 4)
  %16 = load i32**, i32*** %12, align 8
  store i32* %15, i32** %16, align 8
  store i32* %15, i32** %14, align 8
  %17 = load i32*, i32** %14, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %21

19:                                               ; preds = %6
  %20 = load i32, i32* @SQLITE_NOMEM, align 4
  store i32 %20, i32* %7, align 4
  br label %27

21:                                               ; preds = %6
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @sqlite3_declare_vtab(i32* %22, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %24 = load i32*, i32** %14, align 8
  %25 = call i32 @memset(i32* %24, i32 0, i32 4)
  %26 = load i32, i32* @SQLITE_OK, align 4
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %21, %19
  %28 = load i32, i32* %7, align 4
  ret i32 %28
}

declare dso_local i32* @sqlite3_malloc(i32) #1

declare dso_local i32 @sqlite3_declare_vtab(i32*, i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
